# aspire_rv32

./: .clang-format  .gitmodules  .slingshot.yaml  Justfile  README.md  watchpapers.sh
baseline_emulator/: CMakeLists.txt  README.md  baseline_emulator.cpp
docs/: john_williams_email.md  memory_map.ods  memory_map_old.ods
docs/project_ideas/: format.txt  low_power.md  reconfigurable_uarch.md
emulation/: CMakeLists.txt  README.md  baseline_emulator.cpp  differential_fuzzing.cpp  emulator.cpp  riscv-disas.c  rv.c
emulation/include/aspire/: baseline_emulator.hpp  config.hpp  emulator.hpp  mmio.hpp  mmio_device.hpp  simstop.hpp  state.hpp  uart.hpp  util.hpp  wdog.hpp
emulation/include/rv/: rv.h
emulation/riscv_em/core/: core.h  riscv_config.h  riscv_xlen_specifics.h
emulation/riscv_em/core/csr/: csr.h
emulation/riscv_em/core/pmp/: pmp.c  pmp.h
emulation/riscv_em/core/trap/: trap.h
emulation/sail/: README.md
emulation/src/: baseline_emulator.cpp  emulator.cpp  mmio.cpp  rv.c  simstop.cpp  uart.cpp  wdog.cpp
papers/: Justfile
papers/lit_review/: litreview.bib  litreview.tex
papers/proposal/: proposal.bib  proposal.tex
programs/: CMakeLists.txt  Justfile  README.md  build.sh  core_portme.c  core_portme.h  hello_world.c  riscv.cmake
programs/coremark_rv32/: core_portme.c  core_portme.h  ee_printf.c
programs/lib/: LICENSE.riscv  aspire.c  aspire.h  aspire.ld  aspire_arch_test.ld  crt.S  encoding.h  model_test.h  syscalls.c  test.ld
rtl/: alu.sv  decoder.sv  decompressor.sv  memory.sv  prefetcher.sv  regfile.sv  uart.sv  util.sv  watchdog.sv
tests/: alu_ecp5_yosys.json  barrelshifter.sv  barrelshifter_nextpnr.json  barrelshifter_yosys.json  mult.sv  mult_gatemate.json  mult_nextpnr.json  mult_yosys.json  mult_yosys_nobooth.json
